# cpl-out-of-class

./: .gitignore  CMakeLists.txt  README.md
code-style/: CMakeLists.txt  ugly-elegant.c
cpl-animation/: strcpy.py
cpl-animation/recursion/factorial/factorial-manim/: factorial_manim.py
cpl-animation/recursion/factorial/factorial-manim/media/Tex/: 091d042ee2e64e39.tex  209463e4a2f8966c.tex  2c9897a24cbb288f.tex  348b29e6cd94cd6c.tex  4474cd10dff3aa2e.tex  598c3f19eafa2909.tex  6ed764c7a3f209ff.tex  7c1e885d92207b29.tex  8767e929437ebc77.tex  9c5cd0ba4bb1a5c3.tex  9e62b25d18b4b370.tex  aa6287df9bfc11b9.tex  ad0deb6f3ec0cc3e.tex  (+4 more)
cpl-animation/recursion/factorial/factorial-tree/: factorial_tree.py
for/: CMakeLists.txt  for-semantics.c  rose.c
function/: CMakeLists.txt  README.md  func-void.c
generic/: CMakeLists.txt  print.c
if/: CMakeLists.txt  switch.c
io/: CMakeLists.txt  cref-ex  cref-ex.c  cref-note.c  scanf-c17-ex1.c  scanf-c17-ex2.c  scanf-c17-ex3  scanf-c17-ex3-input  scanf-c17-ex3.c  scanf-c17-ex4.c  scanf-c17-ex5  scanf-c17-ex5.c  scanf-f-double.c  scanf-indeterminate  scanf-indeterminate.c
pointers/: CMakeLists.txt  array-and-pointer.c  bsearch-function-pointer.c  nullptr  nullptr.c  pointers-malloc.c  pointers-with-const.c  qsort-array-of-strings.c  qsort-strings.c
resources/: README.md
static/: CMakeLists.txt  README.md  fib.c  rand.c  uid.c
string/: CMakeLists.txt  string-literals.c
timing/: 1.txt  2.txt  3.txt  CMakeLists.txt  primes  primes.c  primes.txt  selection-sort  selection-sort.c  time.txt  timing.pptx  timing.sh
(+5 files in other folders)
