add_executable(scanf-c17-ex1 scanf-c17-ex1.c)
add_executable(scanf-c17-ex2 scanf-c17-ex2.c)
add_executable(scanf-c17-ex3 scanf-c17-ex3.c)
add_executable(scanf-c17-ex4 scanf-c17-ex4.c)
add_executable(scanf-c17-ex5 scanf-c17-ex5.c)

add_executable(cref-note cref-note.c)
add_executable(cref-ex cref-ex.c)

add_executable(scanf-indeterminate scanf-indeterminate.c)

add_executable(scanf-f-double scanf-f-double.c)